tests/compile-fail/Rule_20_7.rs
#![deny(clippy)]
#[deny(warnings)]

macro_rules! three {
   () => 3; //~ ERROR macro rhs must be delimited
}

fn main() {
    println!("{}", three!());
}
